Conexão com banco em andamento

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,116 @@
-<h1>
-  {{title}}
-</h1>
+<nav class="navbar navbar-toggleable-md navbar-inverse bg-primary ">
+  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+    aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <a class="navbar-brand" href="#">Navbar</a>
+  <div class="collapse navbar-collapse" id="navbarNavDropdown">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+
+      <!-- Pet -->
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle text-white" href="" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true"
+          aria-expanded="false">
+          Pet
+        </a>
+        <div routerLinkActive="active" class="dropdown-menu " aria-labelledby="navbarDropdownMenuLink">
+          <a routerLink="/petPesquisa" class="dropdown-item">Pesquisa</a>
+          <a routerLink="/petCadastro" class="dropdown-item">Cadastro</a>
+        </div>
+      </li>
+
+      <!-- Porte -->
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+         Porte
+        </a>
+        <div routerLinkActive="active" class="dropdown-menu " aria-labelledby="navbarDropdownMenuLink">
+        <a routerLink="/portePesquisa" class="dropdown-item">Pesquisa</a>
+          <a routerLink="/porteCadastro" class="dropdown-item">Cadastro</a>
+        </div>
+      </li>
+
+      <!-- Cliente -->
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Cliente
+        </a>
+        <div routerLinkActive="active" class="dropdown-menu " aria-labelledby="navbarDropdownMenuLink">
+          <a routerLink="/clientePesquisa" class="dropdown-item">Pesquisa</a>
+          <a routerLink="/clienteCadastro" class="dropdown-item">Cadastro</a>
+        </div>
+      </li>
+
+      <!-- Raça-->
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Raça
+        </a>
+        <div routerLinkActive="active" class="dropdown-menu " aria-labelledby="navbarDropdownMenuLink">
+          <a routerLink="/raca-pesquisa" class="dropdown-item">Pesquisa</a>
+          <a routerLink="/raca-cadastro" class="dropdown-item">Cadastro</a>
+        </div>
+      </li>
+
+      <!-- Pelo-->
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Pelo
+        </a>
+        <div routerLinkActive="active" class="dropdown-menu " aria-labelledby="navbarDropdownMenuLink">
+          <a routerLink="/pelo-pesquisa" class="dropdown-item">Pesquisa</a>
+          <a routerLink="/pelo-cadastro" class="dropdown-item">Cadastro</a>
+        </div>
+      </li>
+
+      <!-- Servico-->
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+         Servico
+        </a>
+        <div routerLinkActive="active" class="dropdown-menu " aria-labelledby="navbarDropdownMenuLink">
+          <a routerLink="/servico-pesquisa" class="dropdown-item">Pesquisa</a>
+          <a routerLink="/servico-cadastro" class="dropdown-item">Cadastro</a>
+        </div>
+      </li>
+
+      <!-- Pacote -->
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+         Pacote
+        </a>
+        <div routerLinkActive="active" class="dropdown-menu " aria-labelledby="navbarDropdownMenuLink">
+          <a routerLink="/pacote-pesquisa" class="dropdown-item">Pesquisa</a>
+        </div>
+      </li>
+
+      <!-- Login-->
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+         Login
+        </a>
+        <div routerLinkActive="active" class="dropdown-menu " aria-labelledby="navbarDropdownMenuLink">
+          <a routerLink="/login" class="dropdown-item">Login</a>
+        </div>
+      </li>
+
+      <!-- Usuário -->
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+         Usuário
+        </a>
+        <div routerLinkActive="active" class="dropdown-menu " aria-labelledby="navbarDropdownMenuLink">
+          <a routerLink="/usuario-pesquisa" class="dropdown-item">Usuário</a>
+        </div>
+      </li>
+
+    </ul>
+  </div>
+</nav>
+
+<!--
+-->
 <router-outlet></router-outlet>
