--- a/src/app/cliente/cliente-cadastro/cliente-cadastro.component.html
+++ b/src/app/cliente/cliente-cadastro/cliente-cadastro.component.html
@@ -20,13 +20,13 @@
           <div class="col-lg-8">
             <div class="form-group">
               <label for="nome">Nome</label>
-              <input type="text" class="form-control" id="nome" aria-describedby="emailHelp" placeholder="Nome Completo">
+              <input [(ngModel)]="cliente.nome"  name="cliente.nome" type="text" class="form-control" id="nome" aria-describedby="emailHelp" placeholder="Nome Completo">
             </div>
           </div>
           <div class="col-lg-4">
             <div class="form-group">
               <legend class="col-form-legend">Sexo</legend>
-              <label class="custom-control custom-radio">
+              <label  class="custom-control custom-radio">
                 <input id="radio1" name="radio" type="radio" class="custom-control-input">
                 <span class="custom-control-indicator"></span>
                 <span class="custom-control-description">Senhor</span>
@@ -46,14 +46,14 @@
           <div class="col-lg-6">
             <div class="form-group">
               <label for="cep">CPF</label>
-              <input type="text" class="form-control" id="cep" aria-describedby="cpf" placeholder="Somente Números">
+              <input type="text" [(ngModel)]="cliente.cpf"  name="cliente.cpf" class="form-control" id="cep" aria-describedby="cpf" placeholder="Somente Números">
             </div>
 
           </div>
           <div class="col-lg-6">
             <div class="form-group">
               <label for="telefone1">Data Nascimento</label>
-              <input type="text" class="form-control" id="data-nascimento" aria-describedby="data-nascimento" placeholder="Somente Números">
+              <input type="text" [(ngModel)]="cliente.dataNascimento"  name="cliente.dataNascimento" class="form-control" id="data-nascimento" aria-describedby="data-nascimento" placeholder="Somente Números">
             </div>
           </div>
         </div>
@@ -65,8 +65,8 @@
             <div class="form-group">
               <label for="telefone.id" class=" control-label">Telefone {{i+1}}</label>
               <div class="input-group">
-                <input type="text" class="form-control" [(ngModel)]="telefone.valor" name="{{telefone.id}}" aria-describedby="telefone2"
-                  value="{{telefone.valor}}" />
+                <input type="text" class="form-control" [(ngModel)]="telefone.numero" name="{{telefone.id}}" aria-describedby="telefone2"
+                  value="{{telefone.numero}}" />
 
                 <span class="input-group-btn">
 							    <button  *ngIf="cliente.telefones.length > 1" (click)="removerTelefone(i, last)" class="btn btn-secondary" type="button"><i class="fa fa-minus-circle" aria-hidden="true"></i></button>
@@ -126,7 +126,7 @@
               <div class="col-lg-4">
                 <div class="form-group">
                   <label for="rua">Número</label>
-                  <input [(ngModel)]="endereco.numero" name="{{endereco.numero}}-{{endereco.id}}" type="text" class="form-control" id="rua"
+                  <input [(ngModel)]="endereco.numeroResidencia" name="{{endereco.numeroResidencia}}-{{endereco.id}}" type="text" class="form-control" id="rua"
                     aria-describedby="rua" placeholder="Numero">
                 </div>
               </div>
@@ -210,7 +210,7 @@
         <div class="row">
           <div class="col-lg-12 margem-formulario">
             <div class="form-group">
-              <button type="submit" class="btn btn-primary">Salvar</button>
+              <button type="submit" (click)="salvar()" class="btn btn-primary">Salvar</button>
               <button type="submit" class="btn btn-secondary " data-toggle="modal" data-target="#modalDesabilitar">Desabilitar</button>
               <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#modalExcluir">Excluir</button>
               <button type="submit" class="btn btn-secondary">Cancelar</button>
