--- a/src/app/cliente/cliente-cadastro/cliente-cadastro.component.html
+++ b/src/app/cliente/cliente-cadastro/cliente-cadastro.component.html
@@ -20,7 +20,7 @@
           <div class="col-lg-8">
             <div class="form-group">
               <label for="nome">Nome</label>
-              <input [(ngModel)]="cliente.nome"  name="cliente.nome" type="text" class="form-control" id="nome" aria-describedby="emailHelp" placeholder="Nome Completo">
+              <input [(ngModel)]="cliente.nome"  name="cliente-nome" type="text" class="form-control" id="nome" aria-describedby="emailHelp" placeholder="Nome Completo">
             </div>
           </div>
           <div class="col-lg-4">
@@ -46,14 +46,14 @@
           <div class="col-lg-6">
             <div class="form-group">
               <label for="cep">CPF</label>
-              <input type="text" [(ngModel)]="cliente.cpf"  name="cliente.cpf" class="form-control" id="cep" aria-describedby="cpf" placeholder="Somente Números">
+              <input type="text" [(ngModel)]="cliente.cpf"  name="cliente-cpf" class="form-control" id="cep" aria-describedby="cpf" placeholder="Somente Números">
             </div>
 
           </div>
           <div class="col-lg-6">
             <div class="form-group">
               <label for="telefone1">Data Nascimento</label>
-              <input type="text" [(ngModel)]="cliente.dataNascimento"  name="cliente.dataNascimento" class="form-control" id="data-nascimento" aria-describedby="data-nascimento" placeholder="Somente Números">
+              <input type="text" [(ngModel)]="cliente.dataNascimento"  name="cliente-dataNascimento" class="form-control" id="data-nascimento" aria-describedby="data-nascimento" placeholder="Somente Números">
             </div>
           </div>
         </div>
@@ -63,9 +63,9 @@
         <div *ngFor="let telefone of cliente.telefones; let isLast = last; let i = index;" class="row">
           <div class="col-lg-6">
             <div class="form-group">
-              <label for="telefone.id" class=" control-label">Telefone {{i+1}}</label>
+              <label for="telefone._id" class=" control-label">Telefone {{i+1}}</label>
               <div class="input-group">
-                <input type="text" class="form-control" [(ngModel)]="telefone.numero" name="{{telefone.id}}" aria-describedby="telefone2"
+                <input type="text" class="form-control" [(ngModel)]="telefone.numero" name="telefone-numero" aria-describedby="telefone2"
                   value="{{telefone.numero}}" />
 
                 <span class="input-group-btn">
@@ -93,7 +93,7 @@
                     <div class="col-lg-12">
                       <h2 class="h6 pull-left">Endereço {{i+1}}</h2>
                       <button *ngIf="cliente.enderecos.length > 1" (click)="removerEndereco(i, last)" class="btn btn-secondary pull-right" type="button"><i class="fa fa-minus-circle" aria-hidden="true"></i></button>
-                      <button *ngIf="isLast" (click)="adicionarEndereco()" class="btn btn-secondary pull-right" type="button"><i class="fa fa-plus-circle" aria-hidden="true"></i></button>
+                      <button *ngIf="isLast" (click)="adicionarEndereco()" name="botao1" class="btn btn-secondary pull-right" type="button"><i class="fa fa-plus-circle" aria-hidden="true"></i></button>
                     </div>
                   </div>
                 </div>
@@ -105,7 +105,7 @@
                 <div class="form-group">
                   <label for="cep" class=" control-label">CEP</label>
                   <div class="input-group">
-                    <input [(ngModel)]="endereco.cep" name="{{endereco.id}}" type="text" class="form-control" name="cep" id="cep" placeholder="CEP"
+                    <input [(ngModel)]="endereco.cep" name="{{endereco.cep}}-{{endereco._id}}" type="text" class="form-control" name="cep" id="cep" placeholder="CEP"
                     />
                     <span class="input-group-btn">
 							    <button class="btn btn-secondary" type="button"><i class="fa fa-search" aria-hidden="true"></i></button>
@@ -116,7 +116,7 @@
               <div class="col-lg-8">
                 <div class="form-group">
                   <label for="rua">Rua</label>
-                  <input [(ngModel)]="endereco.rua" name="{{endereco.rua}}-{{endereco.id}}" type="text" class="form-control" id="rua" aria-describedby="rua"
+                  <input [(ngModel)]="endereco.rua" name="{{endereco.rua}}-{{endereco._id}}" type="text" class="form-control" id="rua" aria-describedby="rua"
                     placeholder="Rua">
                 </div>
               </div>
@@ -126,14 +126,14 @@
               <div class="col-lg-4">
                 <div class="form-group">
                   <label for="rua">Número</label>
-                  <input [(ngModel)]="endereco.numeroResidencia" name="{{endereco.numeroResidencia}}-{{endereco.id}}" type="text" class="form-control" id="rua"
+                  <input [(ngModel)]="endereco.numeroResidencia" name="{{endereco.numeroResidencia}}-{{endereco._id}}" type="text" class="form-control" id="rua"
                     aria-describedby="rua" placeholder="Numero">
                 </div>
               </div>
               <div class="col-lg-8">
                 <div class="form-group">
                   <label for="edificio">Edifício</label>
-                  <input [(ngModel)]="endereco.edificio" name="{{endereco.edificio}}-{{endereco.id}}" type="text" class="form-control" id="rua"
+                  <input [(ngModel)]="endereco.edificio" name="{{endereco.edificio}}-{{endereco._id}}" type="text" class="form-control" id="rua"
                     aria-describedby="rua" placeholder="Edificio">
                 </div>
               </div>
@@ -143,21 +143,21 @@
               <div class="col-lg-4">
                 <div class="form-group">
                   <label for="rua">Bloco</label>
-                  <input [(ngModel)]="endereco.bloco" name="{{endereco.bloco}}-{{endereco.id}}" type="text" class="form-control" id="rua" aria-describedby="rua"
+                  <input [(ngModel)]="endereco.bloco" name="{{endereco.bloco}}-{{endereco._id}}" type="text" class="form-control" id="rua" aria-describedby="rua"
                     placeholder="Bloco">
                 </div>
               </div>
               <div class="col-lg-4">
                 <div class="form-group">
                   <label for="edificio">Número Apartamento</label>
-                  <input [(ngModel)]="endereco.apartamento" name="{{endereco.apartamento}}-{{endereco.id}}" type="text" class="form-control"
+                  <input [(ngModel)]="endereco.apartamento" name="{{endereco.apartamento}}-{{endereco._id}}" type="text" class="form-control"
                     id="rua" aria-describedby="Número Apartamento" placeholder="Número do Apartamento">
                 </div>
               </div>
               <div class="col-lg-4">
                 <div class="form-group">
                   <label for="complemento">Complemento</label>
-                  <input [(ngModel)]="endereco.complemento" name="{{endereco.complemento}}-{{endereco.id}}" type="text" class="form-control"
+                  <input [(ngModel)]="endereco.complemento" name="{{endereco.complemento}}-{{endereco._id}}" type="text" class="form-control"
                     id="rua" aria-describedby="Complemento" placeholder="Complemento">
                 </div>
               </div>
@@ -167,21 +167,21 @@
               <div class="col-lg-4">
                 <div class="form-group">
                   <label for="bairro">Bairro</label>
-                  <input [(ngModel)]="endereco.bairro" name="{{endereco.bairro}}-{{endereco.id}}" type="text" class="form-control" id="cep"
+                  <input [(ngModel)]="endereco.bairro" name="{{endereco.bairro}}-{{endereco._id}}" type="text" class="form-control" id="cep"
                     aria-describedby="bairro" placeholder="Bairro">
                 </div>
               </div>
               <div class="col-lg-4">
                 <div class="form-group">
                   <label for="rua">Cidade</label>
-                  <input [(ngModel)]="endereco.cidade" name="{{endereco.cidade}}-{{endereco.id}}" type="text" class="form-control" id="cidade"
+                  <input [(ngModel)]="endereco.cidade" name="{{endereco.cidade}}-{{endereco._id}}" type="text" class="form-control" id="cidade"
                     aria-describedby="cidade" placeholder="Cidade">
                 </div>
               </div>
               <div class="col-lg-4">
                 <div class="form-group">
                   <label for="uf">UF</label>
-                  <select [(ngModel)]="endereco.uf" name="{{endereco.uf}}-{{endereco.id}}" class="form-control" id="uf">
+                  <select [(ngModel)]="endereco.uf" name="{{endereco.uf}}-{{endereco._id}}" class="form-control" id="uf">
               <option>1</option>
               <option>2</option>
             </select>
@@ -193,7 +193,7 @@
               <div class="col-lg-12">
               <div class="form-group">
                 <label for="exampleTextarea">Ponto Refência</label>
-                <textarea  [(ngModel)]="endereco.pontoReferencia" name="{{endereco.pontoReferencia}}-{{endereco.id}}" class="form-control" rows="3"></textarea>
+                <textarea  [(ngModel)]="endereco.pontoReferencia" name="{{endereco.pontoReferencia}}-{{endereco._id}}" class="form-control" rows="3"></textarea>
               </div>
             </div>
             </div>
